# espm

./: .gitignore  pyproject.toml  todo.md
doc/: conf.py
doc/reference/: table_utils.rst
espm/: conf.py  cross_sections_utils.py  measures.py  utils.py
espm/datasets/: __init__.py  base.py  built_in_EDXS_datasets.py  eds_spim.py  eds_spim_sim.py
espm/estimators/: __init__.py  base.py  dicotomy.py  smooth_nmf.py  surrogates.py  updates.py
espm/models/: EDXS_function.py  __init__.py  absorption_edxs.py  base.py  edxs.py  generate_EDXS_phases.py
espm/tests/: test_EDXS.py  test_datasets.py  test_docstring.py  test_estimators.py  test_laplacian.py  test_measures.py  test_updates.py  test_utils.py
espm/weights/: __init__.py  abundance.py  generate_weights.py
notebooks/: EDS_spectrum_fitting.ipynb  api.ipynb  convergence-speed.ipynb  convergence.py  generate_data.ipynb  papers_figures.ipynb  toy-ML.ipynb  version_history.ipynb
