[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["espm*"]

[project]
name = "espm"
version = "1.1.4"
description = "Electron SPectro-Microscopy Python Library"
requires-python = ">=3.10"
readme = "README.rst"
keywords = [
    "python",
    "data analysis",
    "microscopy",
    "electron microscopy",
    "energy-dispersive X-ray spectroscopy",
    "X-ray energy-dispersive spectroscopy",
    "EDS",
    "EDX",
    "STEM",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers", 
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux", 
    "Programming Language :: C",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "exspy>=0.3.2",
    "hyperspy>=2.4.0",
    "hyperspy-gui-ipywidgets>=2.1.1",
    "hyperspy-gui-traitsui>=2.1.1",
    "intervaltree>=3.2.1",
    "pyqt5>=5.15.11",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[project.entry-points."hyperspy.extensions"]
espm = "espm"

[project.license]
file = "Licence.txt"

[project.optional-dependencies]
dev = [
    "cython>=3.2.8",
    "flake8>=7.3.0",
    "jupyterlab>=4.6.1",
    "memory-profiler>=0.61.0",
    "nbsphinx>=0.9.8",
    "numpydoc>=1.10.0",
    "pandoc>=2.4",
    "pdoc>=16.0.0",
    "pytest>=9.1.1",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-gallery>=0.21.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-bibtex>=2.7.0",
]

[project.urls]
"Homepage" = "https://espm.readthedocs.io/en/latest/"
"Bug Reports" = "https://github.com/adriente/espm/issues"
"Source" = "https://github.com/adriente/espm"
